# mediawarp

./: CMakeLists.txt  Mediawarp-designnotes.txt  README.md  mediawarpConfig.h.in
src/: main.cpp
src/collection/: ClementineCollection.cpp  ClementineCollection.h  ClementineCollection_test.cpp  CollectionInterface.cpp  CollectionInterface.h  CollectionInterface_test.cpp
src/dao/: MediawarpDAO.cpp  MediawarpDAO.h  MediawarpDAO_test.cpp
src/device/: DeviceIfc.cpp  DeviceIfc.h  DeviceIfc_test.cpp  IPod.cpp  IPod.h  IPod_test.cpp
src/filter/: AlbumFilter.cpp  AlbumFilter.h  ArtistFilter.cpp  ArtistFilter.h  ArtistFilter_test.cpp  AudiobookFilter.cpp  AudiobookFilter.h  BaseFilter.cpp  BaseFilter.h  ChainedAndFilter.cpp  ChainedAndFilter.h  FilterFactory.cpp  FilterFactory.h  FilterFactory_test.cpp  FilterInterface.cpp  FilterInterface.h  FilterInterface_test.cpp  TagFilter.cpp  TagFilter.h  UnhearedFilter.cpp  UnhearedFilter.h  UnhearedFilter_test.cpp
src/model/: MediaItem.cpp  MediaItem.h  Title.cpp  Title.h  Title_test.cpp
src/selection/: ElementSelector.cpp  ElementSelector.h  ElementSelectorAlbums.cpp  ElementSelectorAlbums.h  ElementSelectorDuration.cpp  ElementSelectorDuration.h  ElementSelectorSongs.cpp  ElementSelectorSongs.h  ElementSelector_test.cpp  MediaItemSortFunctions.cpp  MediaItemSortFunctions.h  MediaItemSortFunctions_test.cpp
src/storage/: SQLiteConnection.cpp  SQLiteConnection.h
src/util/: Constants.cpp  Constants.h  Constants_test.cpp  Param.cpp  Param.h  Param_test.cpp  stdnamespaces.h
